Create module dir for ssg and Markdown.pl

--- a/build
+++ b/build
@@ -1,3 +1,4 @@
 #!/bin/bash
 # builds static site using ssg
-./ssg src . test https://www
+rm -rf {css,img,js,*.html,*.xml,.files}
+./modules/ssg src . test https://www
